# MemeAppPython

./: README.md  database.db  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  config.py  database.py  lifecycle.py  main.py
src/MemeApp/: main.py
src/MemeApp/controller/auth/: AuthController.py
src/MemeApp/models/: __init__.py
src/MemeApp/models/memePost/: __init__.py  memePost.py
src/MemeApp/models/user/: __init__.py  user.py
src/MemeApp/view/auth/: AuthService.py  __init__.py
src/controllers/auth/: AuthController.py  __init__.py
src/models/: __init__.py
src/models/memePost/: PostDTO.py  __init__.py
src/models/user/: RegisterDTO.py  User.py  __init__.py
src/schemas/user/: UserModel.py
src/services/auth/: AuthService.py
